changed theme color

--- a/Assets/css/materialize.css
+++ b/Assets/css/materialize.css
@@ -1092,11 +1092,11 @@
 }
 
 .green {
-  background-color: #4CAF50 !important;
+  background-color: #ffffff !important;
 }
 
 .green-text {
-  color: #4CAF50 !important;
+  color: #ffffff !important;
 }
 
 .green.lighten-5 {
@@ -6238,7 +6238,7 @@ input[type=tel]:not(.browser-default):focus.valid ~ label,
 input[type=number]:not(.browser-default):focus.valid ~ label,
 input[type=search]:not(.browser-default):focus.valid ~ label,
 textarea.materialize-textarea:focus.valid ~ label {
-  color: #4CAF50;
+  color: #ffffff;
 }
 
 input:not([type]):focus.invalid ~ label,
@@ -6299,9 +6299,9 @@ input[type=search].valid:not(.browser-default),
 input[type=search].valid:not(.browser-default):focus,
 textarea.materialize-textarea.valid,
 textarea.materialize-textarea.valid:focus, .select-wrapper.valid > input.select-dropdown {
-  border-bottom: 1px solid #4CAF50;
-  -webkit-box-shadow: 0 1px 0 0 #4CAF50;
-          box-shadow: 0 1px 0 0 #4CAF50;
+  border-bottom: 1px solid #ffffff;
+  -webkit-box-shadow: 0 1px 0 0 #ffffff;
+          box-shadow: 0 1px 0 0 #ffffff;
 }
 
 input.invalid:not([type]), input.invalid:not([type]):focus,
@@ -6423,7 +6423,7 @@ input[type=search]:not(.browser-default):focus.valid ~ .helper-text:after,
 textarea.materialize-textarea.valid ~ .helper-text:after,
 textarea.materialize-textarea:focus.valid ~ .helper-text:after, .select-wrapper.valid ~ .helper-text:after {
   content: attr(data-success);
-  color: #4CAF50;
+  color: #ffffff;
 }
 
 input:not([type]).invalid ~ .helper-text:after,
@@ -8333,7 +8333,7 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 }
 
 .slider .indicators .indicator-item.active {
-  background-color: #4CAF50;
+  background-color: #ffffff;
 }
 
 .carousel {
