working dynamic creation of results

--- a/Assets/css/materialize.css
+++ b/Assets/css/materialize.css
@@ -5262,7 +5262,7 @@ small {
 }
 
 .btn:hover, .btn-large:hover, .btn-small:hover {
-  background-color: #2bbbad;
+  background-color: #4a4d4c;
 }
 
 .btn-floating {
