--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2,7 +2,8 @@ footer{
     position: fixed;
     bottom: 0;
     left: 0;
-    width: 100%
+    width: 100%;
+    height: 60px;
 }
 
 
@@ -18,7 +19,7 @@ button{
 
 .sidebar{
    height: 95vh;
-   overflow: scroll;
+   overflow: auto;
 }
 
 
@@ -32,7 +33,8 @@ button{
 }
 
 .sidebar {
-    min-height: 100%
+    min-height: 100%;
+    border-right: #555 2px solid;
 }
 
 
@@ -46,7 +48,7 @@ button{
 }
 
 .overflow {
-    overflow: scroll;
+    overflow: auto;
 }
 
 .pad10 {
@@ -59,4 +61,42 @@ button{
 
 .buttonStretch {
     min-width: 100px;
+}
+
+
+/* demo world */
+
+
+/* .cardImg {
+    max-width: 300px;
+    max-height: 400px;
+}
+
+
+.cardContainer {
+    max-width: 300px;
+    max-height: 400px;
+} */
+
+
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(46, 46, 46); 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
 }
