--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -18,6 +18,7 @@ button{
  .main {
     min-height: 100%;
     height: 100%;
+    min-width: 100%;
 }
 
 .sidebar{
@@ -74,7 +75,7 @@ button{
 /* demo world */
 
 
-/* .cardImg {
+.cardImg {
     max-width: 300px;
     max-height: 400px;
 }
@@ -83,7 +84,7 @@ button{
 .cardContainer {
     max-width: 300px;
     max-height: 400px;
-} */
+}
 
 
 
@@ -120,3 +121,26 @@ button{
 .page-footer {
     padding-top: 10px;
 }
+
+
+
+
+
+
+
+
+/* .card-title {
+    display: none
+}
+.card-title:hover {
+    display:inline
+}
+
+
+.cardRating {
+    display: none
+}
+
+.cardRating:hover {
+    display: inline;
+} */
