--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -85,8 +85,8 @@ button{
 .cardContainer {
     max-width: 400px;
     max-height: 400px;
-    /* min-height: 400px;
-    min-width: 400px; */
+    min-height: 400px;
+    min-width: 400px;
     background-color: #616161;
 }
 
